# ina3221-rs

./: Cargo.toml  LICENSE  README.md
examples/: simple.rs
src/: lib.rs
